vendor/feedvalidator/demo/testcases/opml/errors/invalidCharacters.opml
<?xml version="1.0" encoding="UTF-8"?>

<!--
  Description:  Invalid characters according to the specified encoding
  Expect:       UnicodeError
-->

<opml version="1.1">
	<head>
		<title>Badly “Quoted” Text</title>
		</head>
	<body>
		<outline text="More “quoted” text"/>
		</body>
	</opml>
